# s-templates

./: .wslconfig  README.md  renovate.json
.github/: dependabot.yml
.github/workflows/: github-actions-lint.yaml  renovate-config-validator.yaml  update-submodule.yaml
docker/: compose.yaml  create_news_pr.Dockerfile
git/: git_pull_all.sh
html/: sample.html  sample2.html
lambda/: Dockerfile  bootstrap  reference.docx
monitoring/fluentd/old/: compose.yaml
monitoring/portainer-agent/: compose.yaml
node/: .eslintrc.cjs  README.md  package.json  pnpm-lock.yaml  prettier.config.mjs  tsconfig.json
node/prisma/: schema.prisma  seed.ts
node/prisma/migrations/20230909150706_/: migration.sql
node/src/: app.ts  fetchApi.ts  payload.ts  sample.ts
node/src/_noPrismaProject/: correct_output.txt  curl.sh  error.ts  index.ts  test.sh  types.ts
node/src/controllers/: healthController.ts  secretController.ts  stocksController.spec.ts  stocksController.ts
node/src/routes/: healthRoutes.ts  stocksRoutes.ts
node/src/utils/: error.ts  resetDatabase.ts  validation.ts
python/: README.md  pyproject.toml  sample.py
restClient/: README.md  get.http  post.http
shellscript/: create-pr-and-run-npm.sh  create_merge_request.sh  daily_bak.sh  move_dir.sh  package_update_script.sh  rename.sh  string_operation.sh
test/: correct_output.txt  curl.sh  test.sh
