[project]
name = "python-tester"
version = "0.0.1"
description = "python test environment"
authors = [
    { name = "s-hirano-ist", email = "solucky0725@icloud.com" }
]
readme = "README.md"


dependencies = [
    "python-dotenv>=1.0.0",
    "sola-python-utils>=0.1.1",
]
requires-python = ">= 3.11.4"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
